# MyVerse

./: CMakeLists.txt  CMakeSettings.json  CountLines.ps1  MyVerse.sln  README.md  vcpkg_config.bat
MyVerse/: Application.cpp  Application.h  ApplicationCore.cpp  ApplicationCore.h  Area.cpp  Area.h  AssetRepositoryAnalyzer.cpp  AssetRepositoryAnalyzer.h  Camera.cpp  Camera.h  CameraBuilder.cpp  CameraBuilder.h  CameraController.cpp  CameraController.h  CameraParser.cpp  CameraParser.h  Chunck.cpp  Chunck.h  CircleArea.cpp  CircleArea.h  Client.cpp  Clock.cpp  Clock.h  Component.cpp  Component.h  Debug.cpp  Debug.h  Entity.cpp  Entity.h  EntityBuilder.cpp  EntityBuilder.h  EntityExecutionState.h  EntityFactory.cpp  EntityFactory.h  EntityParser.cpp  EntityParser.h  EntityQuadTree.cpp  EntityQuadTree.h  GameSettings.cpp  GameSettings.h  (+69 more)
cmake/: add_glad.cmake  add_glfw.cmake  add_glm.cmake  add_grpc.cmake  add_json.cmake  add_obj_loader.cmake  add_stb.cmake  add_uuid.cmake
scripts/: circular_inclusion_detector.py  terrain_generator.py
src/: CMakeLists.txt
src/Client/: Client.cpp  main.cpp
src/Client/Area/: Area.cpp  Area.h  CircleArea.cpp  CircleArea.h  OrientationFixedRectangleArea.cpp  OrientationFixedRectangleArea.h
src/Client/Builders/: CameraBuilder.cpp  CameraBuilder.h  EntityBuilder.cpp  EntityBuilder.h  MaterialBuilder.cpp  MaterialBuilder.h  MeshRendererBuilder.cpp  MeshRendererBuilder.h  SceneBuilder.cpp  SceneBuilder.h  TransformBuilder.cpp  TransformBuilder.h
src/Client/Common/: Application.cpp  Application.h  AssetRepositoryAnalyzer.cpp  AssetRepositoryAnalyzer.h  Client.cpp  Clock.cpp  Clock.h  Debug.cpp  Debug.h  Input.cpp  Input.h  RessourceManager.cpp  RessourceManager.h  SceneManager.cpp  SceneManager.h  ScriptManager.cpp  ScriptManager.h
src/Client/Components/: Camera.cpp  Camera.h  Component.cpp  MeshRenderer.cpp  MeshRenderer.h  Script.cpp  Script.h  Transform.cpp  Transform.h
src/Client/Components/Camera/: Camera.cpp  CameraBuilder.cpp  CameraBuilder.h  CameraParser.cpp  CameraParser.h
src/Client/Components/MeshRenderer/: MeshRenderer.cpp  MeshRendererBuilder.cpp  MeshRendererBuilder.h  MeshRendererParser.cpp  MeshRendererParser.h
src/Client/Components/Script/: Script.cpp  ScriptFactory.cpp  ScriptFactory.h
src/Client/Components/Transform/: Transform.cpp  TransformBuilder.cpp  TransformBuilder.h  TransformParser.cpp  TransformParser.h
src/Client/Core/: ApplicationCore.cpp  ApplicationCore.h  InputCore.cpp  InputCore.h  RessourceManagerCore.cpp  RessourceManagerCore.h  SceneManagerCore.cpp  SceneManagerCore.h
src/Client/Entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityBuilder.cpp  EntityBuilder.h  EntityParser.cpp  EntityParser.h  EntityQuadTree.cpp  EntityQuadTree.h  Player.cpp  Player.h
src/Client/Entity/EntityQuadTree/: EntityQuadTree.cpp
src/Client/Factories/: EntityFactory.cpp  EntityFactory.h  ScriptFactory.cpp  ScriptFactory.h
src/Client/GameScripts/: GameSettings.cpp  GameSettings.h  PlayerMovementController.cpp  PlayerMovementController.h  Rotation.cpp  Rotation.h  SpawnTest.cpp  SpawnTest.h
src/Client/GameScripts/Controllers/: CameraController.cpp  CameraController.h  PlayerController.cpp  PlayerController.h
src/Client/Parser/: CameraParser.cpp  CameraParser.h  EntityParser.cpp  EntityParser.h  MaterialParser.cpp  MaterialParser.h  MeshRendererParser.cpp  MeshRendererParser.h  SceneParser.cpp  SceneParser.h  TransformParser.cpp  TransformParser.h
src/Client/Ressource/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Client/Ressource/Terrain/: Chunck.cpp  Chunck.h  Terrain.cpp  Terrain.h
src/Client/Ressources/Material/: Material.cpp  Material.h  MaterialBuilder.cpp  MaterialBuilder.h  MaterialParser.cpp  MaterialParser.h
src/Client/Ressources/Mesh/: Mesh.cpp  Mesh.h
src/Client/Ressources/Prefab/: Prefab.cpp
src/Client/Ressources/Scene/: Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SceneParser.cpp  SceneParser.h
src/Client/Ressources/Shader/: Shader.cpp  Shader.h
src/Client/Ressources/Terrain/: Chunck.cpp  Chunck.h  Terrain.cpp
src/Client/Ressources/Texture/: Texture.cpp
src/Client/Scripts/: CameraFollowPlayer.cpp  CameraFollowPlayer.h  GameSettings.cpp  GameSettings.h  PlayerMovementController.cpp  PlayerMovementController.h  Rotation.cpp  Rotation.h  SpawnTest.cpp  SpawnTest.h
src/Client/Utils/: GraphicsUtils.h  JsonUtils.cpp  JsonUtils.h  MathUtils.cpp  MathUtils.h  SupportedFileType.h  Utils.cpp  Utils.h
src/Core/: Application.cpp  Application.h  AssetRepositoryAnalyzer.cpp  AssetRepositoryAnalyzer.h  Clock.cpp  Clock.h  Debug.cpp  Debug.h  Input.cpp  Input.h
src/Core/Area/: Area.cpp  Area.h  CircleArea.cpp  CircleArea.h  OrientationFixedRectangleArea.cpp  OrientationFixedRectangleArea.h
src/Core/Common/: Application.cpp  Application.h  AssetRepositoryAnalyzer.cpp  AssetRepositoryAnalyzer.h  Clock.cpp  Clock.h  Debug.cpp  Input.cpp  Input.h
src/Core/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  MeshRenderer.cpp  MeshRenderer.h  Script.cpp  Script.h
src/Core/CoreClass/: ApplicationCore.cpp  ApplicationCore.h  InputCore.cpp  InputCore.h  RessourceManagerCore.cpp  RessourceManagerCore.h
src/Core/CoreClasse/: ApplicationCore.cpp  ApplicationCore.h  InputCore.cpp  InputCore.h  RessourceManagerCore.cpp  RessourceManagerCore.h
src/Core/Entity/: Entity.cpp  Entity.h  EntityExecutionState.h  EntityQuadTree.cpp  EntityQuadTree.h
src/Core/Factories/: ScriptFactory.cpp  ScriptFactory.h
src/Core/Managers/: RessourceManager.cpp  RessourceManager.h
src/Core/Rendering/: Scene.cpp  Scene.h
src/Core/Ressource/: Chunck.cpp  Chunck.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Core/Ressource/Terrain/: Chunck.cpp  Chunck.h  Terrain.cpp  Terrain.h
src/Core/Utils/: GraphicsUtils.h  JsonUtils.cpp  JsonUtils.h  MathUtils.cpp  MathUtils.h  SupportedFileType.h  Utils.cpp  Utils.h
(+24 files in other folders)
